fix: layout shift

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -73,3 +73,10 @@
         @apply bg-background text-foreground;
     }
 }
+
+@layer utilities {
+
+    .not-hero {
+        @apply motion-opacity-in-0 motion-delay-1000
+    }
+}
